web-infras/parser/tests/fixtures/babel/es2022/class-properties/arguments-in-nested-class-decorator-call-expression/output.txt
[SyntaxError]: 'arguments' is not allowed in class field initializer or static initialization block (3,26)
3|    foo = class B { @bar(arguments) foo };
 |                        ^
[SyntaxError]: 'arguments'/'eval' can't be defined or assigned to in strict mode code (3,26)
3|    foo = class B { @bar(arguments) foo };
 |                        ^
